Bug 95314 - libinput throws error on 3-finger swipes on Synaptics touchpad
Summary: libinput throws error on 3-finger swipes on Synaptics touchpad
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: 1.3.0
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
: 101327 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-05-08 10:18 UTC by Alexander Mikhaylenko
Modified: 2017-06-09 00:29 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
libinput-list-devices output (3.80 KB, text/plain)
2016-05-08 10:18 UTC, Alexander Mikhaylenko
Details
sample libinput-debug-events output (15.57 KB, text/plain)
2016-05-08 10:20 UTC, Alexander Mikhaylenko
Details
evemu-record output (12.93 KB, text/plain)
2016-05-12 15:42 UTC, Robert Hollencamp
Details

Description Alexander Mikhaylenko 2016-05-08 10:18:47 UTC
Created attachment 123546 [details]
libinput-list-devices output

I have an ASUS P53E laptop with a Synaptics touchpad.

libinput-debug-events recognizes the 3-finger gestures, but prints an error on each update:

libinput error: libinput bug: Event for missing capability CAP_GESTURE on device "SynPS/2 Synaptics TouchPad"

Both Wayland and Xorg are equally affected.

I use Debian Sid with libinput 1.2.4. (1.2.4-1 package)

The gestures work fine if I workaround the capability check by making it always return 1, so the hardware is indeed capable to do that.
Comment 1 Alexander Mikhaylenko 2016-05-08 10:20:41 UTC
Created attachment 123547 [details]
sample libinput-debug-events output
Comment 2 Peter Hutterer 2016-05-12 01:55:33 UTC
Please attach the output of evemu-record for one of these gestures, thanks.
Comment 3 Robert Hollencamp 2016-05-12 15:42:24 UTC
Created attachment 123646 [details]
evemu-record output

I recieve a similar error when trying gestures on my laptop; attached is the output from evemu-record when I try and do a four-finger drag
Comment 5 Peter Hutterer 2016-05-15 23:03:57 UTC
commit 98ee1791ca6496cfe353f729047786237f1ffd3a
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Fri May 13 09:46:50 2016 +1000

    gestures: don't send swipe gestures when gestures are disabled
Comment 6 Jaume 2016-05-29 16:06:36 UTC
Is this problem fixed on 1.3.0? Because I'm getting the same error
Comment 7 Jaume 2016-05-29 16:10:41 UTC
(In reply to Jaume from comment #6)
> Is this problem fixed on 1.3.0? Because I'm getting the same error

Sorry, I have seen that the commit was after the 1.3.0 tag. Thanks!
Comment 8 Peter Hutterer 2016-05-30 00:12:13 UTC
Just pushed out 1.3.1, that contains the fix.
Comment 9 Peter Hutterer 2017-06-09 00:29:07 UTC
*** Bug 101327 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.